bk_ida/gobmkida/c1/finish_and_score_game
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/finish_and_score_game/src/interface/play_gtp.c:2932:6: error: use of undeclared identifier 'finish_and_score_game_current_seed'
if ( finish_and_score_game_current_seed != seed ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/finish_and_score_game/src/interface/play_gtp.c:2934:1: error: use of undeclared identifier 'finish_and_score_game_current_seed'
finish_and_score_game_current_seed = seed; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/finish_and_score_game/src/interface/play_gtp.c:2946:6: error: use of undeclared identifier 'finish_and_score_game_current_board'
v7 = finish_and_score_game_current_board; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/finish_and_score_game/src/interface/play_gtp.c:2996:55: error: too many arguments to function call, expected 3, have 4
final_score = aftermath_compute_score( v11, komi, v1, 0LL); 
              ~~~~~~~~~~~~~~~~~~~~~~~                 ^~~
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/finish_and_score_game/src/include/gnugo.h:479:1: note: 'aftermath_compute_score' declared here
float aftermath_compute_score(int color, float komi, SGFTree *tree);
^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/finish_and_score_game/src/obj/2/play_gtp.o] Error 1
